# portal

./: .gitignore  README.md  pyproject.toml
NewsPortal/: .flake8  db.sqlite3
NewsPortal/NewsPortal/: settings.py
NewsPortal/appointment/: admin.py  models.py  scheduler.py  signals.py  tasks.py  urls.py  views.py
NewsPortal/appointment/migrations/: 0001_initial.py  0002_delete_appointment.py
NewsPortal/news/: admin.py  apps.py  filters.py  forms.py  models.py  notes.md  serializers.py  signal.py  tasks.py  tests.py  translation.py  urls.py  utils.py  views.py
NewsPortal/news/forRead/: code.md  mess.md  notes.md  schema.md  templates.md
NewsPortal/news/migrations/: 0001_initial.py  0002_rename_user_author_author.py  0003_rename_author_author_user.py  0004_alter_comment_comment_time_in.py  0005_alter_post_title.py  0006_category_subscribers.py  0007_rename_categories_post_categories_post.py  0008_alter_category_subscribers.py  0009_alter_post_categories_post.py  0010_alter_post_categories_post.py  0011_alter_post_categories_post.py  0012_alter_author_options_alter_category_options_and_more.py  0013_alter_author_rating_alter_author_user_and_more.py  0014_alter_category_category_name.py  0015_alter_author_options_alter_category_options_and_more.py  0016_category_category_name_en_category_category_name_ru.py  0017_author_user_en_author_user_ru.py  0018_alter_post_content.py  (+2 more)
NewsPortal/templates/: 403.html  _post_week.html  base.html  default.html  login.html  profile.html  signup.html  swagger-ui.html
NewsPortal/work/: .env  celery.py  settings.py  urls.py
(+38 files in other folders)
