[tool.poetry]
name = "portal"
version = "0.1.0"
description = ""
authors = ["Rasen Nikov <rasen800@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
ipython = "^8.19.0"
django-filter = "^23.5"
django-crispy-forms = "^2.1"
crispy-bootstrap5 = "^2023.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
